# CompProg_AES256_Project

./: .gitignore  CMakeLists.txt
include/: AES256.hpp  CTR.hpp  FileUtils.hpp  HexUtils.hpp
src/: AES256.cpp  CTR.cpp  FileUtils.cpp  HexUtils.cpp  main.cpp
test/: test1  test1.enc
